# LLM-Privacy-Guard

./: .gitignore  CLAUDE.md  README.md  README_zh.md  cli.py  plugin.json  plugin.py  proxy_server.py  pyproject.toml  setup_tools.py  submit_moss.py  test_engine.py
.github/workflows/: release.yml
.opencode/: AGENTS.md
installer/: build.ps1  install.ps1  uninstall.ps1
privacy_engine/: __init__.py  config.py  detector.py
scripts/: _audit_full.py
tests/: test_proxy.py  test_proxy_routing.py  test_setup_tools.py
