[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-privacy-guard"
version = "2.0.1"
description = "LLM 消息脱敏引擎 + 本地 HTTP 代理 — 在消息发给 LLM API 之前自动替换敏感信息"
readme = "README_zh.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
privacy-guard = "cli:main"

[project.urls]
Homepage = "https://github.com/lenychang520/llm-privacy-guard"
Issues = "https://github.com/lenychang520/llm-privacy-guard/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["plugin", "proxy_server", "cli", "setup_tools"]

[tool.setuptools.packages.find]
include = ["privacy_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
